Implemented travis CI. Updated the readme. Updated dependencies.

--- a/client/package.json
+++ b/client/package.json
@@ -4,20 +4,21 @@
   "description": "NPM packages for csgo-matchmaking-client",
   "private": true,
   "scripts": {
-    "prestart": "npm install",
     "start": "node client.js",
-    "predev": "npm install",
     "dev": "nodemon -L --watch ./ ./client.js",
     "build": "pkg ./client.js --targets latest-linux-x64,latest-macos-x64,latest-win-x64 --out-path ./build"
   },
   "author": "Glenn de Haan",
   "license": "MIT",
+  "engines": {
+    "node": ">=6.0.0"
+  },
   "dependencies": {
-    "simple-node-logger": "^0.93.30",
-    "socket.io-client": "^2.0.3"
+    "simple-node-logger": "^0.93.37",
+    "socket.io-client": "^2.0.4"
   },
   "devDependencies": {
-    "nodemon": "^1.12.1",
-    "pkg": "^4.2.5"
+    "nodemon": "^1.17.2",
+    "pkg": "^4.3.0"
   }
 }
