--- a/server/package.json
+++ b/server/package.json
@@ -4,25 +4,30 @@
   "description": "NPM packages for csgo-matchmaking-server",
   "private": true,
   "scripts": {
-    "prestart": "npm install",
     "start": "node server.js",
-    "predev": "npm install && mocha -R spec --recursive",
     "dev": "nodemon -L --watch ./ ./server.js",
-    "test": "mocha -R spec --recursive --watch",
+    "test": "nyc --reporter=html --reporter=text mocha -R spec --recursive",
+    "test:watch": "mocha -R spec --recursive --watch",
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
     "build": "pkg ./server.js --targets latest-linux-x64,latest-macos-x64,latest-win-x64 --out-path ./build"
   },
   "author": "Glenn de Haan",
   "license": "MIT",
+  "engines": {
+    "node": ">=6.0.0"
+  },
   "dependencies": {
-    "simple-node-logger": "^0.93.30",
-    "node-json-db": "^0.7.3",
-    "socket.io": "^2.0.3"
+    "coveralls": "^3.0.0",
+    "node-json-db": "^0.7.5",
+    "nyc": "^11.6.0",
+    "simple-node-logger": "^0.93.37",
+    "socket.io": "^2.0.4"
   },
   "devDependencies": {
-    "nodemon": "^1.12.1",
-    "mocha": "^4.0.1",
-    "should": "^13.1.1",
-    "socket.io-client": "^2.0.3",
-    "pkg": "^4.2.5"
+    "mocha": "^5.0.4",
+    "nodemon": "^1.17.2",
+    "pkg": "^4.3.0",
+    "should": "^13.2.1",
+    "socket.io-client": "^2.0.4"
   }
 }
